# RCVW

./: RCVW_Application_Tracking_Worksheet.xlsx  RCVW_OSADP_Application_Metadata_Collection_Form_v3.docx  RCVW_OSADP_Application_Page_Content.docx  README.md  README.txt  RELEASE-NOTES.txt
Plugins/: CMakeLists.txt
Plugins/AIOUSB/: .gitignore  .gitmodules  .travis.yml  README.md  appveyor.yml
Plugins/AIOUSB/AIOUSB/: CMakeLists.txt  COPYING  Doxyfile  sourceme.sh
Plugins/AIOUSB/AIOUSB/CMakeScripts/: FindGTestTap.cmake  FindMatlab.cmake  FindOctave.cmake  FindPHP5.cmake  FindR.cmake  FindVALGRIND.cmake  Findglibc.cmake  Findlibusb-1.0.cmake  build_samples.cmake
Plugins/AIOUSB/AIOUSB/Firmware/: 10-acces_usb.alt.rules  10-acces_usb.rules  README.doc  accesloader.pl
Plugins/AIOUSB/AIOUSB/Mkfiles/: oses.inc
Plugins/AIOUSB/AIOUSB/ToolChains/: ToolChain32bitCompile.txt  ToolChain_arm_gnueabihf_gcc4.8.txt
Plugins/AIOUSB/AIOUSB/deprecated/classlib/: .gitattributes  AI16_DataPoint.cpp  AI16_DataPoint.hpp  AI16_DataSet.cpp  AI16_DataSet.hpp  AI16_InputRange.cpp  AI16_InputRange.hpp  AO16_AnalogOutputSubsystem.cpp  AO16_AnalogOutputSubsystem.hpp  AO16_OutputRange.cpp  AO16_OutputRange.hpp  AnalogIORange.cpp  AnalogIORange.hpp  AnalogInputSubsystem.cpp  AnalogInputSubsystem.hpp  AnalogOutputSubsystem.cpp  AnalogOutputSubsystem.hpp  CMakeLists.txt  Counter.cpp  Counter.hpp  CounterSubsystem.cpp  CounterSubsystem.hpp  CppCommon.h  DA12_AnalogOutputSubsystem.cpp  DA12_AnalogOutputSubsystem.hpp  DA12_OutputRange.cpp  DA12_OutputRange.hpp  DIOStreamSubsystem.cpp  DIOStreamSubsystem.hpp  DeviceSubsystem.cpp  DeviceSubsystem.hpp  DigitalIOSubsystem.cpp  DigitalIOSubsystem.hpp  Doxyfile  Makefile  OutputVoltagePoint.hpp  Overview  README.doc  USBDeviceBase.cpp  USBDeviceBase.hpp  (+20 more)
Plugins/AIOUSB/AIOUSB/deprecated/java/: Makefile  Overview.html
Plugins/AIOUSB/AIOUSB/lib/: .gitattributes  ADCConfigBlock.c  ADCConfigBlock.h  AIOBuf.c  AIOBuf.h  AIOChannelMask.c  AIOChannelMask.h  AIOChannelRange.c  AIOChannelRange.h  AIOCmd.c  AIOCmd.h  AIOCommandLine.c  AIOCommandLine.h  AIOConfiguration.c  AIOConfiguration.h  AIOContinuousBuffer.c  AIOContinuousBuffer.h  AIOCountsConverter.c  AIOCountsConverter.h  AIODeviceInfo.c  AIODeviceInfo.h  AIODeviceQuery.c  AIODeviceQuery.h  AIODeviceTable.c  AIODeviceTable.h  AIOEither.c  AIOEither.h  AIOFifo.c  AIOFifo.h  AIOList.c  AIOList.h  AIOPlugNPlay.c  AIOPlugNPlay.h  AIOProductTypes.c  AIOProductTypes.h  AIOTuple.c  AIOTuple.h  AIOTypes.h  AIOUSBDevice.c  AIOUSBDevice.h  (+35 more)
Plugins/AIOUSB/AIOUSB/lib/filepp/: Between.pm  footer.h  header.h  libaiousb.h.pre
Plugins/AIOUSB/AIOUSB/lib/mocks/: Makefile  mock_aiocontbuf_get_data.c  mock_aiocontbuf_get_data_arduino.c  mock_capture_usb.c  mock_dio.c  mock_usb_xfers.c
Plugins/AIOUSB/AIOUSB/lib/ndkbuild/: Makefile
Plugins/AIOUSB/AIOUSB/lib/tests/: aio_adc.cpp  aio_continuous_buf.cpp  aiobuf.cpp  aiousb_dac.cpp  aiousb_dio.cpp  properties.cpp  usb_test.cpp
Plugins/AIOUSB/AIOUSB/lib/wrappers/: AIOUSB.i  CMakeLists.txt  GNUMakefile  Makefile.PL  README.doc  README.md  WrapperTargets.inc  aioarrays.i  php.ini
Plugins/AIOUSB/AIOUSB/samples/: CMakeLists.txt
Plugins/AIOUSB/AIOUSB/samples/TestLib/: CMakeLists.txt  TestCaseSetup.cpp  TestCaseSetup.h  aiocommon.c  aiocommon.h
Plugins/AIOUSB/AIOUSB/samples/USB-AI16-16/: .gitattributes  Makefile  README.doc  Sample.java  Sample2.java  bulk_acquire_sample.c  burst_test.c  continuous_mode.c  continuous_mode_callback.c  continuous_mode_from_json_config.c  dio_sample.c  histogram.r  read_channels_test.c  read_channels_test_scala.scala  read_channels_with_getchannelv_test.cpp  reverse_cal_table.cpp  run_continuous_mode.sh  runtests.sh  sample.cpp  simp_test.cpp  simple_continuous_with_json.c  start_stop_continuous.c  test_fastscan.cpp
Plugins/AIOUSB/AIOUSB/samples/USB-AO16-16/: README.doc  sample.cpp
Plugins/AIOUSB/AIOUSB/samples/USB-ARB1/: stream_test.c
Plugins/AIOUSB/AIOUSB/samples/USB-CTR-15/: ctr15.py  how_to_run.sh
Plugins/AIOUSB/AIOUSB/samples/USB-DA12-8A/: README.doc  Sample.java  SampleClass.cpp  sample.cpp
Plugins/AIOUSB/AIOUSB/samples/USB-DIO-16/: README.doc  Sample.java  receiver.cpp  sample.cpp  standalone_receiver.c  standalone_receiver.py
Plugins/AIOUSB/AIOUSB/samples/USB-DIO-32/: README.doc  Sample.java  read_and_write_sample.c  sample.py  sample3.c
Plugins/AIOUSB/AIOUSB/samples/USB-DIO-96/: dio96.py  (+3 more)
Plugins/AIOUSB/scripts/: build.sh  build_utilities.sh  clean.sh  testit.sh
Plugins/DifferentialGPSPlugin/: .cproject  .project  CMakeLists.txt  manifest.json
Plugins/DifferentialGPSPlugin/src/: DifferentialGPSPlugin.cpp
Plugins/HRIStatusPlugin/: CMakeLists.txt  SampleIntersection.xml  aiocommon.c  aiocommon.h  manifest.json
Plugins/HRIStatusPlugin/Debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
Plugins/HRIStatusPlugin/Debug/_CPack_Packages/Linux/ZIP/HRIStatusPlugin-0.0.8/: manifest.json
Plugins/HRIStatusPlugin/src/: HRIStatusPlugin.cpp
Plugins/RCVWPlugin/: .cproject  .project  CMakeLists.txt  manifest.json
Plugins/RCVWPlugin/Debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
Plugins/RCVWPlugin/src/: HRILocation.h  RCVWPlugin.cpp
Plugins/VehicleInterfacePlugin/: .cproject  .project  CANSim.json  CMakeLists.txt  ClevelandBus.json  HondaCAN.json  HondaGW.json  KiaSedona.json  POC-351VTC.json  SAE_J1979.json  VolvoCAN.json  manifest.json
Plugins/VehicleInterfacePlugin/src/: VehicleConnection.cpp  VehicleConnection.h  VehicleDataAdaptor.hpp  VehicleDataDriverAdaptor.hpp  VehicleFileAdaptor.hpp  VehicleInterfacePlugin.cpp
Plugins/VehicleInterfacePlugin/src/workers/: AnalogIOInterface.h  CanData.cpp  CanData.hpp  CompositeVehicle.h  ODBEnumType.hpp  ODBIIMessage.hpp  SocketCanInterface.cpp  SocketCanInterface.hpp  WdtDioCanInterface.cpp  WdtDioCanInterface.h
docs/: README.md
neousys/wdt_dio/4.15.0-29-generic.x86_64/: QtCAN  QtDIO  QtTest  test_cos  test_dio  test_wdt  wdt_dio.ko
(+89 files in other folders)
