PROJECT ( HRIStatusPlugin VERSION 3.3.0 LANGUAGES CXX )

IF (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/../../tmx-build)
	SET (CMAKE_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../tmx-build ${CMAKE_INCLUDE_PATH})
ENDIF ()

SET (TMX_PLUGIN_NAME "HRIStatus")

FIND_PACKAGE (libusb-1.0 REQUIRED)
FIND_PATH (MEX_INCLUDE_DIR NAMES mex.h PATH_SUFFIXES octave-3.8.1/octave octave-4.0.0/octave octave-4.2.2/octave)

# Determine the WDT_DIO include directory
FIND_PATH (WDT_DIO_INCLUDE wdt_dio.h
		   PATH_SUFFIXES neousys/wdt_dio/include)

FILE (GLOB WDT_DIO_LIBRARY_PATH "${WDT_DIO_INCLUDE}/../*")
FIND_LIBRARY (WDT_DIO_LIBRARY wdt_dio ${WDT_DIO_LIBRARY_PATH})

INCLUDE_DIRECTORIES (${AIOUSB_DIR}/lib ${LIBUSB_1_INCLUDE_DIRS} ${MEX_INCLUDE_DIR})

BuildTmxPlugin ( )

TARGET_INCLUDE_DIRECTORIES (${PROJECT_NAME} PRIVATE ${WDT_DIO_INCLUDE})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} tmxutils ${WDT_DIO_LIBRARY} aiousb ${USB_LIBRARY}) 
